joined actor with film_actor to see who got most appearances

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -1112,6 +1112,447 @@
     "\n",
     "rent_movie_cost"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6343843b",
+   "metadata": {},
+   "source": [
+    "## Actors with most movie appearances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec603f8d",
+   "metadata": {},
+   "source": [
+    "Check columns in \"film_actor\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b862dbc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actor_id</th>\n",
+       "      <th>film_id</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021-03-06 15:52:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2021-03-06 15:52:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2021-03-06 15:52:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>106</td>\n",
+       "      <td>2021-03-06 15:52:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>140</td>\n",
+       "      <td>2021-03-06 15:52:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5457</th>\n",
+       "      <td>200</td>\n",
+       "      <td>879</td>\n",
+       "      <td>2021-03-06 15:53:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5458</th>\n",
+       "      <td>200</td>\n",
+       "      <td>912</td>\n",
+       "      <td>2021-03-06 15:53:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5459</th>\n",
+       "      <td>200</td>\n",
+       "      <td>945</td>\n",
+       "      <td>2021-03-06 15:53:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5460</th>\n",
+       "      <td>200</td>\n",
+       "      <td>958</td>\n",
+       "      <td>2021-03-06 15:53:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5461</th>\n",
+       "      <td>200</td>\n",
+       "      <td>993</td>\n",
+       "      <td>2021-03-06 15:53:28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5462 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      actor_id  film_id         last_update\n",
+       "0            1        1 2021-03-06 15:52:45\n",
+       "1            1       23 2021-03-06 15:52:45\n",
+       "2            1       25 2021-03-06 15:52:45\n",
+       "3            1      106 2021-03-06 15:52:45\n",
+       "4            1      140 2021-03-06 15:52:45\n",
+       "...        ...      ...                 ...\n",
+       "5457       200      879 2021-03-06 15:53:28\n",
+       "5458       200      912 2021-03-06 15:53:28\n",
+       "5459       200      945 2021-03-06 15:53:28\n",
+       "5460       200      958 2021-03-06 15:53:28\n",
+       "5461       200      993 2021-03-06 15:53:28\n",
+       "\n",
+       "[5462 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"SELECT * FROM film_actor;\").df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8be8f235",
+   "metadata": {},
+   "source": [
+    "Check columns in \"actor\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cf0bdcc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actor_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PENELOPE</td>\n",
+       "      <td>GUINESS</td>\n",
+       "      <td>2021-03-06 15:51:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NICK</td>\n",
+       "      <td>WAHLBERG</td>\n",
+       "      <td>2021-03-06 15:51:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>ED</td>\n",
+       "      <td>CHASE</td>\n",
+       "      <td>2021-03-06 15:51:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>DAVIS</td>\n",
+       "      <td>2021-03-06 15:51:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>JOHNNY</td>\n",
+       "      <td>LOLLOBRIGIDA</td>\n",
+       "      <td>2021-03-06 15:51:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>196.0</td>\n",
+       "      <td>BELA</td>\n",
+       "      <td>WALKEN</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>197.0</td>\n",
+       "      <td>REESE</td>\n",
+       "      <td>WEST</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>198.0</td>\n",
+       "      <td>MARY</td>\n",
+       "      <td>KEITEL</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>199.0</td>\n",
+       "      <td>JULIA</td>\n",
+       "      <td>FAWCETT</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>200.0</td>\n",
+       "      <td>THORA</td>\n",
+       "      <td>TEMPLE</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     actor_id first_name     last_name         last_update\n",
+       "0         1.0   PENELOPE       GUINESS 2021-03-06 15:51:59\n",
+       "1         2.0       NICK      WAHLBERG 2021-03-06 15:51:59\n",
+       "2         3.0         ED         CHASE 2021-03-06 15:51:59\n",
+       "3         4.0   JENNIFER         DAVIS 2021-03-06 15:51:59\n",
+       "4         5.0     JOHNNY  LOLLOBRIGIDA 2021-03-06 15:51:59\n",
+       "..        ...        ...           ...                 ...\n",
+       "195     196.0       BELA        WALKEN 2021-03-06 15:52:00\n",
+       "196     197.0      REESE          WEST 2021-03-06 15:52:00\n",
+       "197     198.0       MARY        KEITEL 2021-03-06 15:52:00\n",
+       "198     199.0      JULIA       FAWCETT 2021-03-06 15:52:00\n",
+       "199     200.0      THORA        TEMPLE 2021-03-06 15:52:00\n",
+       "\n",
+       "[200 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"SELECT * FROM actor;\").df()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9225a319",
+   "metadata": {},
+   "source": [
+    "Left join to see who got most appearances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9bea8ef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_count</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54</td>\n",
+       "      <td>SUSAN</td>\n",
+       "      <td>DAVIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>42</td>\n",
+       "      <td>GINA</td>\n",
+       "      <td>DEGENERES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>WALTER</td>\n",
+       "      <td>TORN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40</td>\n",
+       "      <td>MARY</td>\n",
+       "      <td>KEITEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>39</td>\n",
+       "      <td>MATTHEW</td>\n",
+       "      <td>CARREY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>37</td>\n",
+       "      <td>SANDRA</td>\n",
+       "      <td>KILMER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>36</td>\n",
+       "      <td>SCARLETT</td>\n",
+       "      <td>DAMON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>35</td>\n",
+       "      <td>ANGELA</td>\n",
+       "      <td>WITHERSPOON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>35</td>\n",
+       "      <td>GROUCHO</td>\n",
+       "      <td>DUNST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>35</td>\n",
+       "      <td>UMA</td>\n",
+       "      <td>WOOD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_count first_name    last_name\n",
+       "0           54      SUSAN        DAVIS\n",
+       "1           42       GINA    DEGENERES\n",
+       "2           41     WALTER         TORN\n",
+       "3           40       MARY       KEITEL\n",
+       "4           39    MATTHEW       CARREY\n",
+       "5           37     SANDRA       KILMER\n",
+       "6           36   SCARLETT        DAMON\n",
+       "7           35     ANGELA  WITHERSPOON\n",
+       "8           35    GROUCHO        DUNST\n",
+       "9           35        UMA         WOOD"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_actors = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    COUNT(*) AS movie_count,\n",
+    "    a.first_name,\n",
+    "    a.last_name\n",
+    "FROM actor a\n",
+    "JOIN film_actor fa\n",
+    "    ON a.actor_id = fa.actor_id\n",
+    "GROUP BY\n",
+    "    a.first_name,\n",
+    "    a.last_name\n",
+    "ORDER BY\n",
+    "    movie_count DESC\n",
+    "LIMIT 10;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "top_actors\n"
+   ]
   }
  ],
  "metadata": {
