payment handled by staff

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "id": "9bea8ef5",
    "metadata": {},
    "outputs": [
@@ -1502,14 +1502,14 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>35</td>\n",
-       "      <td>GROUCHO</td>\n",
-       "      <td>DUNST</td>\n",
+       "      <td>HENRY</td>\n",
+       "      <td>BERRY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>35</td>\n",
-       "      <td>UMA</td>\n",
-       "      <td>WOOD</td>\n",
+       "      <td>VAL</td>\n",
+       "      <td>BOLGER</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1525,11 +1525,11 @@
        "5           37     SANDRA       KILMER\n",
        "6           36   SCARLETT        DAMON\n",
        "7           35     ANGELA  WITHERSPOON\n",
-       "8           35    GROUCHO        DUNST\n",
-       "9           35        UMA         WOOD"
+       "8           35      HENRY        BERRY\n",
+       "9           35        VAL       BOLGER"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
     "    a.first_name,\n",
     "    a.last_name\n",
     "FROM actor a\n",
-    "JOIN film_actor fa\n",
+    "LEFT JOIN film_actor fa\n",
     "    ON a.actor_id = fa.actor_id\n",
     "GROUP BY\n",
     "    a.first_name,\n",
@@ -1552,6 +1552,377 @@
     "\"\"\").df()\n",
     "\n",
     "top_actors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d12f5bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>staff_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>address_id</th>\n",
+       "      <th>picture</th>\n",
+       "      <th>email</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>active</th>\n",
+       "      <th>username</th>\n",
+       "      <th>password</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Mike</td>\n",
+       "      <td>Hillyer</td>\n",
+       "      <td>3</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Mike.Hillyer@sakilastaff.com</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mike</td>\n",
+       "      <td>8cb2237d0679ca88db6464eac60da96345513964</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jon</td>\n",
+       "      <td>Stephens</td>\n",
+       "      <td>4</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Jon.Stephens@sakilastaff.com</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Jon</td>\n",
+       "      <td>8cb2237d0679ca88db6464eac60da96345513964</td>\n",
+       "      <td>2021-03-06 15:52:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   staff_id first_name last_name  address_id picture  \\\n",
+       "0         1       Mike   Hillyer           3    <NA>   \n",
+       "1         2        Jon  Stephens           4    <NA>   \n",
+       "\n",
+       "                          email  store_id  active username  \\\n",
+       "0  Mike.Hillyer@sakilastaff.com         1       1     Mike   \n",
+       "1  Jon.Stephens@sakilastaff.com         2       1      Jon   \n",
+       "\n",
+       "                                   password         last_update  \n",
+       "0  8cb2237d0679ca88db6464eac60da96345513964 2021-03-06 15:52:00  \n",
+       "1  8cb2237d0679ca88db6464eac60da96345513964 2021-03-06 15:52:00  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"SELECT * FROM staff;\").df()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c33d941a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>payment_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>staff_id</th>\n",
+       "      <th>rental_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>payment_date</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2005-05-25 11:30:37</td>\n",
+       "      <td>2021-03-06 15:55:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>573</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>2005-05-28 10:35:23</td>\n",
+       "      <td>2021-03-06 15:55:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1185</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>2005-06-15 00:54:12</td>\n",
+       "      <td>2021-03-06 15:55:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1422</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>2005-06-15 18:02:53</td>\n",
+       "      <td>2021-03-06 15:55:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1476</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>2005-06-15 21:08:46</td>\n",
+       "      <td>2021-03-06 15:55:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16044</th>\n",
+       "      <td>16045</td>\n",
+       "      <td>599</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14599</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>2005-08-21 17:43:42</td>\n",
+       "      <td>2021-03-06 15:58:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16045</th>\n",
+       "      <td>16046</td>\n",
+       "      <td>599</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14719</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2005-08-21 21:41:57</td>\n",
+       "      <td>2021-03-06 15:58:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16046</th>\n",
+       "      <td>16047</td>\n",
+       "      <td>599</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15590</td>\n",
+       "      <td>8.99</td>\n",
+       "      <td>2005-08-23 06:09:44</td>\n",
+       "      <td>2021-03-06 15:58:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16047</th>\n",
+       "      <td>16048</td>\n",
+       "      <td>599</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15719</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2005-08-23 11:08:46</td>\n",
+       "      <td>2021-03-06 15:58:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16048</th>\n",
+       "      <td>16049</td>\n",
+       "      <td>599</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15725</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2005-08-23 11:25:00</td>\n",
+       "      <td>2021-03-06 15:58:09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16049 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       payment_id  customer_id  staff_id  rental_id  amount  \\\n",
+       "0               1            1         1         76    2.99   \n",
+       "1               2            1         1        573    0.99   \n",
+       "2               3            1         1       1185    5.99   \n",
+       "3               4            1         2       1422    0.99   \n",
+       "4               5            1         2       1476    9.99   \n",
+       "...           ...          ...       ...        ...     ...   \n",
+       "16044       16045          599         1      14599    4.99   \n",
+       "16045       16046          599         1      14719    1.99   \n",
+       "16046       16047          599         2      15590    8.99   \n",
+       "16047       16048          599         2      15719    2.99   \n",
+       "16048       16049          599         2      15725    2.99   \n",
+       "\n",
+       "             payment_date         last_update  \n",
+       "0     2005-05-25 11:30:37 2021-03-06 15:55:57  \n",
+       "1     2005-05-28 10:35:23 2021-03-06 15:55:57  \n",
+       "2     2005-06-15 00:54:12 2021-03-06 15:55:57  \n",
+       "3     2005-06-15 18:02:53 2021-03-06 15:55:57  \n",
+       "4     2005-06-15 21:08:46 2021-03-06 15:55:57  \n",
+       "...                   ...                 ...  \n",
+       "16044 2005-08-21 17:43:42 2021-03-06 15:58:08  \n",
+       "16045 2005-08-21 21:41:57 2021-03-06 15:58:08  \n",
+       "16046 2005-08-23 06:09:44 2021-03-06 15:58:09  \n",
+       "16047 2005-08-23 11:08:46 2021-03-06 15:58:09  \n",
+       "16048 2005-08-23 11:25:00 2021-03-06 15:58:09  \n",
+       "\n",
+       "[16049 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"SELECT * FROM payment;\").df()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dde4985",
+   "metadata": {},
+   "source": [
+    "## Number of payments handled by the staff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9dccd3e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>payments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jon</td>\n",
+       "      <td>Stephens</td>\n",
+       "      <td>7992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mike</td>\n",
+       "      <td>Hillyer</td>\n",
+       "      <td>8057</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first_name last_name  payments\n",
+       "0        Jon  Stephens      7992\n",
+       "1       Mike   Hillyer      8057"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "staff_payments = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    s.first_name,\n",
+    "    s.last_name,\n",
+    "    COUNT(p.payment_id) AS payments\n",
+    "FROM staff s\n",
+    "LEFT JOIN payment p\n",
+    "    ON s.staff_id = p.staff_id\n",
+    "GROUP BY s.first_name,\n",
+    "         s.last_name;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "staff_payments"
    ]
   }
  ],
