number of cities in each country

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -1924,6 +1924,151 @@
     "\n",
     "staff_payments"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "699cc827",
+   "metadata": {},
+   "source": [
+    "## Query to look after how many cities in each country iun this dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "cd7ce590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>num_cities</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>India</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>China</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>Madagascar</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>Malawi</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Saint Vincent and the Grenadines</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>Runion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>109 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              country  num_cities\n",
+       "0                               India          60\n",
+       "1                               China          53\n",
+       "2                       United States          35\n",
+       "3                               Japan          31\n",
+       "4                              Mexico          30\n",
+       "..                                ...         ...\n",
+       "104                        Madagascar           1\n",
+       "105                            Malawi           1\n",
+       "106  Saint Vincent and the Grenadines           1\n",
+       "107                            Runion           1\n",
+       "108                         Lithuania           1\n",
+       "\n",
+       "[109 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities_per_country = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    co.country,\n",
+    "    COUNT(*) AS num_cities\n",
+    "FROM city c\n",
+    "JOIN country co\n",
+    "    ON c.country_id = co.country_id\n",
+    "GROUP BY co.country\n",
+    "ORDER BY num_cities DESC;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "cities_per_country\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ff8351",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
