query to see who is the top customer

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "cd7ce590",
    "metadata": {},
    "outputs": [
@@ -2059,15 +2059,143 @@
     "ORDER BY num_cities DESC;\n",
     "\"\"\").df()\n",
     "\n",
-    "cities_per_country\n"
+    "cities_per_country\n",
+    "\n",
+    "# In this i used a litte bit of help by llm\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e85ee68",
+   "metadata": {},
+   "source": [
+    "## Which is the top customer based on most rented movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55ff8351",
+   "execution_count": 98,
+   "id": "0c8246d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customer_id', 'store_id', 'first_name', 'last_name', 'email',\n",
+       "       'address_id', 'active', 'create_date', 'last_update'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"SELECT * FROM customer;\").df().columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "a12b9a37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['rental_id', 'rental_date', 'inventory_id', 'customer_id',\n",
+       "       'return_date', 'staff_id', 'last_update'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"SELECT * FROM rental;\").df().columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "82bcb384",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>num_rentals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ELEANOR</td>\n",
+       "      <td>HUNT</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first_name last_name  num_rentals\n",
+       "0    ELEANOR      HUNT           46"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_customer = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    c.first_name,\n",
+    "    c.last_name,\n",
+    "    COUNT(r.rental_id) AS num_rentals\n",
+    "FROM customer c\n",
+    "JOIN rental r\n",
+    "    ON c.customer_id = r.customer_id\n",
+    "GROUP BY\n",
+    "    c.first_name,\n",
+    "    c.last_name\n",
+    "ORDER BY\n",
+    "    num_rentals DESC\n",
+    "LIMIT 1;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "top_customer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89cbc13a",
+   "metadata": {},
    "source": []
   }
  ],
